--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
             background-image: url(images/background.jpg);
             background-size: 100%;
             padding: 20px; margin: 0;
-            height: 400px;
+            height: 600px;
             text-align: center;
         }
         a {
@@ -27,6 +27,13 @@
             display: inline-block;
             margin-right: 20px;
         }
+        h1 {
+            margin: 80px;
+            font-size: 100px;
+            color: rgb(255, 227, 88);
+            text-shadow: 0 0 20px black;
+            font-family: 'Luckiest Guy', cursive;
+        }
         .logo a {
             background-image: url("images/favicon.ico");
             background-size: 100px;
@@ -37,63 +44,43 @@
             position: relative; 
             right: -10px;
         }
-        .feature-box div {
-            background: rgb(26, 25, 25); 
-            height: 200px;
-            border-radius: 6px;
+        .logo a:hover {
+            transform: scale(1.1);
         }
-        section.feature-box.apps {
-            background: white;
+        .features {
+            background: transparent;
+            background-image: url(images/ground.png);
+            background-size: 100%;
+            height: 400px;
+            background-repeat: no-repeat;
             color: white;
-            padding: 10px; padding-bottom: 0px;
+            padding: 30px;
             display: flex;
+            flex-direction: row;
         }
-        section.feature-box.ad {
+        .features figure{
+            margin: auto;
+            text-align: center;
+            text-transform: uppercase;
+            font-weight: bold;
+        }
+        .features figure img{
+            width: 300px; height: 300px;
+            border-radius: 50%;
+            box-shadow: 0 0 10px;
+            border: 2px solid white;
+        }
+        .features figure figcaption{
+            margin: 5px;
+        }
+        section.features.ad {
             background: white;
             color: white;
             margin: 0; padding: 10px 
-        }
-        section.feature-box.apps div {
-            width: 100%;
-            margin: 5px;
-            padding-top: 50px;
-            text-align: center;
-        }
-        section.feature-box.apps div.roblox a{
-            background-image: url(images/roblox.jpg);
-            background-size: 150px;
-            background-repeat: no-repeat;
-            display: inline-block;
-            width: 150px; height: 150px;
-            text-indent: -999999999999px;
-            position: relative;
-            border-radius: 6px;;
-        }
-        section.feature-box.apps div.minecraft a {
-            background-image: url(images/minecraft.png);
-            background-size: 150px;
-            background-repeat: no-repeat;
-            display: inline-block;
-            width: 150px; height: 150px;
-            text-indent: -999999999999px;
-            position: relative;
-            border-radius: 6px;;
-        }
-        section.feature-box.apps div.fortnite a {
-            background-image: url(images/fortnite.png);
-            background-size: 150px;
-            background-repeat: no-repeat;
-            display: inline-block;
-            width: 150px; height: 150px;
-            text-indent: -999999999999px;
-            position: relative;
-            border-radius: 6px;;
         }
         section.feature-box.ad div {
             margin-bottom: 5px; padding: 20px;
         }
         footer {
             background: rgb(26, 25, 25);
-            padding: 10px 20px;
-
         }
